discussion/kv_engine/176364/176364_rev5_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-52264: Add BucketQuotaChangeTask to deal with quota changes

The task is created on Bucket creation and snoozed indefinitely.
When a quota change comes in via epctl flush param we wake the task
and have it change the Bucket quota. Currently this change in quota
sets the configuration parameter which updates watermarks and other
related quotas in a configuration listener. This code will be moved
into this task in a future change. In another change we will also
handle decreases in quota in a graceful manner with the goal of
preventing tmp fails as we reduce memory usage.

Change-Id: Ia43dda9fea8eab2547f9fafacf28d911b90c943c

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Ben Huddleston
Date: 2022-06-24 17:41:40.000000000
Message: 
Uploaded patch set 5.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-06-24 18:42:41.000000000
Message: 
Patch Set 5: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/47059/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [2/47]: test max_size - water_mark changes.....\kv_engine\engines\ep\tests\ep_testsuite_basic.cc:89 Test failed: `" (Expected `1000000", got `1000" - Incorrect new size.)
(82 ms) FAIL
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/47059/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18310/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/bucket_quota_change_task.h:31:43: error: use of undeclared identifier "INT_MAX" [clang-diagnostic-error]
                     /*initialSleepTime*/ INT_MAX,
                                          ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18310/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/bucket_quota_change_task.h:31:43:
error: use of undeclared identifier "INT_MAX" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18310/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/39529/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/bucket_quota_change_task.h:31:43:
error: use of undeclared identifier "INT_MAX"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/39529/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/7980/ : FAILURE

Compile error at [2022-06-24T17:48:58.650Z] ../kv_engine/engines/ep/src/bucket_quota_change_task.h:31:43:
error: use of undeclared identifier "INT_MAX"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/7980/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/20181/ : FAILURE

Compile error at [2022-06-24T17:49:27.884Z] ../kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore_config.h:17:10:
fatal error: libmagma/magma.h: No such file or directory
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/20181/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/19397/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [5/93]: test dcp consumer flow control aggressive...../kv_engine/engines/ep/tests/ep_testsuite_dcp.cc:1571 Test failed: `" (Expected `1200000000", got `125829120" - Incorrect new size.)
[2022-06-24T18:01:35.981Z] (250 ms) FAIL
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/19397/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/17434/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/21175/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/20527/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/28558/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/8081/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
